--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -24,10 +24,9 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
-    "lodash.merge": "^4.6.2",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
     "vite": "^7.2.4",
-    "vite-plugin-garfish": "workspace:*"
+    "vite-plugin-garfish-mf": "workspace:*"
   }
 }
