--- a/packages/vite-plugin-garfish/package.json
+++ b/packages/vite-plugin-garfish/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-plugin-garfish",
+  "name": "vite-plugin-garfish-mf",
   "version": "1.0.0",
   "description": "A vite plugin for running Micro frontend applications using garfish",
   "keywords": [
