--- a/examples/react/turbo.json
+++ b/examples/react/turbo.json
@@ -6,7 +6,8 @@
       "dependsOn": ["vite-plugin-garfish-mf#build"]
     },
     "dev": {
-      "dependsOn": ["vite-plugin-garfish-mf#build"]
+      "dependsOn": ["vite-plugin-garfish-mf#build"],
+      "cache": false
     }
   }
 }
