--- a/packages/vite-plugin-garfish/package.json
+++ b/packages/vite-plugin-garfish/package.json
@@ -48,10 +48,11 @@
     "build": "tsdown"
   },
   "dependencies": {
-    "cheerio": "^1.2.0"
+    "@swc/core": "^1.15.11",
+    "cheerio": "^1.2.0",
+    "domhandler": "^5.0.3"
   },
   "devDependencies": {
-    "domhandler": "^5.0.3",
     "tsdown": "^0.20.3"
   },
   "peerDependencies": {
