--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@garfish/bridge-react-v18": "^1.19.8",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-router": "^7.13.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
