--- a/examples/shell/package.json
+++ b/examples/shell/package.json
@@ -1,18 +1,26 @@
 {
   "name": "shell",
-  "private": true,
   "version": "0.0.0",
+  "private": true,
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vue-tsc -b && vite build",
     "preview": "vite preview"
   },
-  "devDependencies": {
-    "typescript": "~5.9.3",
-    "vite": "^7.2.4"
-  },
   "dependencies": {
-    "garfish": "^1.19.8"
+    "@garfish/es-module": "^1.19.8",
+    "garfish": "^1.19.8",
+    "vue": "^3.5.24",
+    "vue-router": "^5.0.2"
+  },
+  "devDependencies": {
+    "@types/node": "^24.10.1",
+    "@vitejs/plugin-vue": "^6.0.1",
+    "@vue/tsconfig": "^0.8.1",
+    "typescript": "~5.9.3",
+    "unplugin-vue-components": "^31.0.0",
+    "vite": "^7.2.4",
+    "vue-tsc": "^3.1.4"
   }
 }
