--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,7 @@
 name: Release
 
 permissions:
+  id-token: write
   contents: write
 
 on:
@@ -51,8 +52,6 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
       - name: Publish to NPM
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
           cp README.md packages/vite-plugin-garfish/README.md
           git tag vite-plugin-garfish@${{ steps.version_to_release.outputs.result }}
